--- a/.computenest/config.yaml
+++ b/.computenest/config.yaml
@@ -183,7 +183,7 @@ Service:
       - Name: 尝鲜套餐
         Parameters:
           EcsInstanceType:
-          - ecs.u1-c1m2.large
+          - ecs.u1-c1m2.xlarge
           PayType: PostPaid
           InternetChargeType: PayByTraffic
           InternetMaxBandwidthOut: 8
@@ -231,7 +231,7 @@ Service:
       - Name: 尝鲜套餐
         Parameters:
           EcsInstanceType:
-          - ecs.u1-c1m2.large
+          - ecs.u1-c1m2.xlarge
           PayType: PostPaid
           InternetChargeType: PayByTraffic
           InternetMaxBandwidthOut: 8
