--- a/.computenest/ros_templates/template-enterprise.yaml
+++ b/.computenest/ros_templates/template-enterprise.yaml
@@ -143,6 +143,15 @@ Parameters:
       Random: true
       InstanceType: ${EcsInstanceType}
 Resources:
+  ExistVsw:
+    Type: DATASOURCE::VPC::VSwitch
+    Properties:
+      VSwitchId:
+        Fn::GetJsonValue:
+          - VSwitchId
+          - Fn::GetAtt:
+              - ExtensionDataSource
+              - VSwitch
   ExtensionDataSource:
     Type: DATASOURCE::APIG::Gateway
     Properties:
@@ -252,12 +261,9 @@ Resources:
               - ExtensionDataSource
               - VSwitch
       ZoneId:
-        Fn::Jq:
-          - First
-          - .[0].ZoneId
-          - Fn::GetAtt:
-              - ExtensionDataSource
-              - Zones
+        Fn::GetAtt:
+          - ExistVsw
+          - ZoneId
       SecurityGroupId:
         Ref: SecurityGroup
       ImageId: ecs_image_quickstart-mcp
@@ -457,15 +463,6 @@ Metadata:
           - InstancePassword
         Label:
           default: 资源配置
-      - Parameters:
-          - ZoneId
-          - VpcOption
-          - VpcId
-          - VSwitchId
-          - VpcCidrBlock
-          - VSwitchCidrBlock
-        Label:
-          default: 可用区配置
     QuickDeployConfig:
       PackageFields:
         - Key: EcsInstanceType
