--- a/.computenest/ros_templates/template-enterprise.yaml
+++ b/.computenest/ros_templates/template-enterprise.yaml
@@ -402,6 +402,8 @@ Resources:
         Fn::GetAtt:
           - InstanceGroup
           - InstanceIds
+      CommandContent: |-
+        echo ""
       CommandContentOnDeletion:
         Fn::Sub:
           - |
